cmake_minimum_required(VERSION 3.10)
project(fdf)
file(GLOB LIBFT "libft/*.c")
file(GLOB LIBMATRIX "libmatrix/*.c")
include_directories(/usr/local/include)
add_executable(fdf src/draw.c src/events.c src/input.c src/line.c src/log.c src/main.c src/scene.c)
add_library(ft STATIC ${LIBFT})
add_library(matrix STATIC ${LIBMATRIX})
target_link_libraries(fdf ft)
target_link_libraries(fdf matrix)
target_link_libraries(fdf /usr/local/lib/libmlx.a)
target_link_libraries(fdf "-framework OpenGL")
target_link_libraries(fdf "-framework AppKit")